--- a/carinfo.html
+++ b/carinfo.html
@@ -6,7 +6,7 @@
 		<title>Vite + TS</title>
 	</head>
 	<body>
-		<pug src="./src/pages/index.pug" />
-		<script type="module" src="/src/main.ts"></script>
+		<pug src="./src/pages/carinfo.pug" />
+		<script type="module" src="/src/carinfo.ts"></script>
 	</body>
 </html>
