--- a/my_cars.html
+++ b/my_cars.html
@@ -6,7 +6,7 @@
 		<title>Vite + TS</title>
 	</head>
 	<body>
-		<pug src="./src/pages/index.pug" />
+		<pug src="./src/pages/my_cars.pug" />
 		<script type="module" src="/src/main.ts"></script>
 	</body>
 </html>
