add a functionality to my_car component

--- a/my_cars.html
+++ b/my_cars.html
@@ -7,6 +7,6 @@
 	</head>
 	<body>
 		<pug src="./src/pages/my_cars.pug" />
-		<script type="module" src="/src/main.ts"></script>
+		<script type="module" src="/src/my_cars.ts"></script>
 	</body>
 </html>
